tests/js_error/source_locations/class/methods/to_property_key.exp
Error: 
  ┌ tests/js_error/source_locations/class/methods/to_property_key.js:1:37
  |
1 | var poisoned = { toString() { throw new Error() } };
  |                                     ^
Stack trace:
  at toString (tests/js_error/source_locations/class/methods/to_property_key.js:1:37)
  at <global> (tests/js_error/source_locations/class/methods/to_property_key.js:4:4)