tests/js_error/source_locations/class/methods/to_property_key.js
var poisoned = { toString() { throw new Error() } };

class C {
  [poisoned]() {}
}